--- a/versions/0.2.1/changelog.txt
+++ b/versions/0.2.1/changelog.txt
@@ -1,6 +1,6 @@
 ## **CAMBIOS HECHOS V0.2.1**
 
-Este es un pequeño parche que servirá tanto al cliente como al servidor.
+Este es un pequeño parche el cuál trae la base para tener actualizaciones al alcance de 1 solo click, las futuras actualizaciones solo necesitaran la descarga de 1 archivo, el cual dependerá de la versión que uses (Modrinth o SKLauncher)
 
 ### **Cliente**
 
