--- a/versions/0.4.0/changelog.txt
+++ b/versions/0.4.0/changelog.txt
@@ -1,22 +1,22 @@
-## **CAMBIOS HECHOS V0.3.4**
+## **CAMBIOS HECHOS V0.4.0**
 
-Éste es un pequeño parche de optimización pero muy importante a la vez ya que cambia elementos en la interfaz y también añade la 'HACHA DE ÁRBOL', un objeto dedicado a talar árboles exclusivamente.
+Bienvenidos a la actualización más grande de toda la beta, ésta actualización trae muchisimas mejoras visuales tanto en calidad, como en coherencia y estilo, tambien se corrigieron, eliminaron y agregaron modificaciones de calidad de vida, de combate y de exploración.
 
-![teaser_v0.3.4](https://i.imgur.com/0SMTtMK.gif)
+![teaser_v0.4.0](https://i.imgur.com/Po6k0TL.png)
 
 *Info en detalle*▽
 
-- Añadida HACHA PARA TALAR (Tree Axes)
-- Iconos de VOICE CHAT ajustados
-- Modelo en 3d de la mesa de desencantamiento añadido
-- Se ha bajado la intensidad visual de la tormenta de arena
-- Eliminados mods de entidades por spawn masivo e innecesario (Homesteads, Boids, Toms Mobs, Living Things)
-- Pedos removidos
-
+- Compatibilidad de texturas en la mayoria de mods
+- Interfaces creadas para ayudar con los controles
+- Gráficos cinemáticos agregados
+- Brillo aumentado para mejorar la exploración subterranea
+- Traducciones hechas para casi todas las modificaciones
+- Generación de mundo perfeccionada eliminando, reemplazando y añadiendo estructuras lógicas que no rompan la coherencia del mundo
+- Herobrine removido
 
 ***Nota del desarrollador***
 
-*¡Primer parche del año! Está lleno de hotfixes y añade cosas nuevas para que puedan tener una experiencia un poco más acorde a lo que se quiere trasmitir, esperemos que ésta versión dure bastante, la próxima versión traerá muchos cambios visuales*
+*Me tomaré un descanso para dedicarme un poco más a otras cosas relacionadas a trabajo IRL y STREAMING, me demoré en sacar esta versión porque quería que saliera lo más perfecta posible... cualquier *
 
 
 **-karto**
