--- a/versions/0.4.0/changelog.txt
+++ b/versions/0.4.0/changelog.txt
@@ -16,7 +16,7 @@ Bienvenidos a la actualización más grande de toda la beta, ésta actualizació
 
 ***Nota del desarrollador***
 
-*Me tomaré un descanso para dedicarme un poco más a otras cosas relacionadas a trabajo IRL y STREAMING, me demoré en sacar esta versión porque quería que saliera lo más perfecta posible... cualquier *
+*Me tomaré un descanso para dedicarme un poco más a otras cosas relacionadas a trabajo IRL y STREAMING, me demoré en sacar esta versión porque quería que saliera lo más perfecta posible... cualquier bug por favor notificarme por Discord*
 
 
 **-karto**
